# SearchEngine

./: AVLTree.h  Answers.md  CMakeLists.txt  DocumentParser.cpp  DocumentParser.h  Index.h  IndexHandler.cpp  IndexHandler.h  QueryProcessor.cpp  QueryProcessor.h  README.md  SearchEngine.cpp  SearchEngine.h  StringCleaner.cpp  StringCleaner.h  main.cpp  test_AVLTree.cpp  test_IndexHandler.cpp  test_QueryProcessor.cpp
data/: map.txt  orgs.txt  people.txt  words.txt
data_from_test/: map.txt  orgs.txt  people.txt  words.txt
